
[metadata]
name = environmentmodules
version = 0.0.1
author = Ben Albrecht
author_email = benalbrecht@pitt.edu
description = Python API for Environment Modules
long_description = file:README.rst
license = Apache2.0
keywords = environment modules,
url = "https://github.com/ben-albrecht/environmentmodules"

[options]
packages = environmentmodules

